#ifndef PROJEKT_CLIENT_H
#define PROJEKT_CLIENT_H
#include <string>
#include <vector>
#include "typedefs.h"

#include <boost/serialization/access.hpp>
#include <boost/serialization/vector.hpp>
#include <boost/serialization/string.hpp> // Potrzebne żeby Boost umiał zapisać stringa

class Client {
private:
    std::string firstName;
    std::string lastName;
    std::string phoneNumber;
    std::string email;
    std::string personalID;
    bool archive = false;               /**< Flaga określająca, czy klient jest zarchiwizowany. */

    // Dajemy uprawnienia BOOSTOWI
    Client() = default;
    friend class boost::serialization::access;

    template<class Archive>
    void serialize(Archive &ar, const unsigned int version) {
        ar & firstName; // Zapisujemy/odczytujemy imię
        ar & lastName; // Zapisujemy/odczytujemy nazwisko
        ar & phoneNumber; // Zapisujemy/odczytujemy numer telefonu
        ar & email; // Zapisujemy/odczytujemy email
        ar & personalID; // Zapisujemy/odczytujemy Pesel
        ar & archive;
    }

public:
    Client(const std::string &_firstName, const std::string &_lastName, const std::string &_phoneNumber,
           const std::string &_email,
           const std::string &_personalID);

    ~Client() = default;

    const std::string &getFirstName() const;

    const std::string &getLastName() const;

    const std::string &getPhoneNumber() const;

    const std::string &getEmail() const;

    const std::string &getPersonalID() const;

    void setPhoneNumber(const std::string &phoneNumber);

    void setEmail(const std::string &email);


    /**
     * @brief Zwraca podstawowe informacje o kliencie.
     * @return std::string Ciąg znaków: Imię, Nazwisko, PESEL, Numer telefonu, Email.
     */
    std::string getInfo() const;

    /**
     * @brief Zwraca informację o statusie archiwalnym klienta.
     * @return true jeśli klient jest zarchiwizowany, false jeśli jest aktywny.
     */
    bool isArchive() const;

    /**
     * @brief Zmienia status archiwalny klienta.
     * @param archive Nowy stan flagi (true dla archiwizacji).
     */
    void setArchive(bool archive);
};


#endif
