@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0

class Car {
- carBrand:string
- carModel:string
- archive:bool
- VIN:string
+ getInfo():string
}

class Client {
- firstName:string
- lastName:string
- phoneNumber:string
- email:string
- PersonalID:string
- archive:bool
+ getPersonalID():string
+ getInfo():string
}

abstract class Service {
  -name:string
  -repaired:bool
  +getServiceCost():int
  +getInfo():string
}
note left of Service
getServiceCost() zwraca koszt wykonania pojedynczej
uslugi poniewaz naprawa moze dotyczec wielu usług
np. 1h wymiana tarcz hamulcowych, geometria kol badz
usluga diagnostyczna ze stala cena(przeglad)
getInfo() zwraca wyraz skladajacy sie z
wszystkich atrybutow i jest wirtualny
end note

abstract class TimeBasedService {
  -PartHourlyPrice:int
  -beginTime:ptime
  -endTime:ptime
  +endService(endTime:ptime):void
  +getHours():int
  + getInfo():string
}

class DiagnosticService {
  -fixedPrice:int
  +getServiceCost():int
}
note bottom of DiagnosticService
    Usługa specjalna która ma stała cenę fixedPrice
end note

class PartRegeneration {
-usage:int
+getInfo():string
+getServiceCost():int
}
note bottom of PartRegeneration
getServiceCost() nadpisuje metodę bazową
usage jest procentowe:
od 0 do 25% mnoznik rosnie liniowo od 1.0 do 1.2
od 25% do 50% mnoznik 1.5
od 50 do 100% rosnie liniowo od 1.5 do 2.0
end note

class NewPartReplacement {
-NewPartPrice:int
+getInfo():string
+getServiceCost():int
}
note bottom of NewPartReplacement
getServiceCost() nadpisuje metodę bazową dodając
do kosztów robocizny cenę zakupu nowej części (NewPartPrice)
end note

class Repair {
-id:int
-repairCost:int
-beginTime:ptime
-endTime:ptime
-archive:bool
+calculateTotal():int
+getServicesAmount():int
+getSingleServiceCost(serwis:Service):int
+add(service:Service): void
+remove(service:Service): void
+get(service:Service): Service
}
note right of Repair
calculateTotal() oblicza repairCost, czyli ile ma zapłacić klient
za wykonaną naprawę. Sumę wszystkich usług.
getSingleServiceCost() zwraca getServiceCost() pomnożony
przez mnożnik pozyskany z getMultiplier,
pole archive sprawdza czy stworzony obiekt jest zarchiwizowany
end note
note left of Client
pole archive sprawdza czy stworzony obiekt jest zarchiwizowany
end note
abstract class PoweredBy {
+getMultiplier():double
+getInfo():string
}
note left of PoweredBy
getMultiplier() oraz getInfo() jest czysto wirtualny
zwraca okreslony mnoznik
- dla benzyny 1.0
- dla Diesla 1.2
- dla baterii(samochodu elektrycznego) 1.5
end note

class Engine {
-engineDisplacement:int
+getMultiplier():double
+getInfo():string
}
enum FuelType {
Petrol
Diesel
}
enum Specialization{
    Electrician
    engineMechanic
    Diagnostician
    VAGSpecialist
    Master
}
enum ResourceType{
    carLift
    diagnosticComputer
    airCompressor
    tools
}
note bottom of Engine
getMultiplier() dla klasy Engine jest zalezny rowniez od jego pojemnosci
- ponizej 1000cm3 wynosi 1.0
- od 1000cm3 do 2000cm3 rosnie liniowo
  od 1.0 do 1.5
- od 2000cm3 do 6000cm3 rowniez rosnie liniowo
  od 1.5 do 3.0
getMultiplier() w przypadku Diesla zwraca odpowiedni mnoznik
dla pojemnosci silnika pomnozony analogicznie przez 1.2
end note

class Accumulator {
-capacityKWh:int
-degradationLevel:int
+getMultiplier():double
+getInfo():string
}
note bottom of Accumulator
getMultiplier() dla klasy Accumulator jest zalezne od pojemnosc akumulatora
podanej w kWh
-poniżej 40kWh wynosi 1.0
-od 40kWh do 100kWh rośnie liniowo
  od 1.0 do 1.8
-powyżej 100kWh wynosi 2.5
Odpowiednio pomnożone przez 1.5
Dodatkowo, jeśli degradationLevel > 20
wynik powiększany jest o stałą wartość +0.3 (ryzyko zawodowe).
degradationLevel nie moze przekroczyc 100.
end note
abstract MechanicAbstraction{
    +isAvailable(): bool

}
abstract ResourceAbstraction{
    +isAvailable(): bool
}
note right of ResourceAbstraction
    isAvailable() jest czysto wirtualne
end note
note top of MechanicAbstraction
    isAvailable() jest czysto wirtualne
end note
class Mechanic {
  -id:int
  -firstName:string
  -lastName:string
  -isBusy:bool
  +isAvailable(): bool
  + getInfo():string
}
class Resource{
  -id:int
  -resourceName:string
  -isBusy:bool
  +isAvailable(): bool
  + getInfo():string
}
note bottom of Mechanic
    Przechowuje dane personalne pracownika.
    - isBusy: określa, czy mechanik jest aktualnie przypisany do naprawy.
end note
note bottom of Mechanic
    gdy isBusy() zwraca true,
    to isAvailable() zwraca fałsz i odwrotnie
end note
note bottom of Resource
    gdy isBusy() zwraca true,
    to isAvailable() zwraca fałsz i odwrotnie
end note
note left of Car
pole archive sprawdza czy stworzony obiekt jest zarchiwizowany
end note

' <--- RELACJE --->

Client "1" -- "0..*" Car : posiada
Repair "0..*" -- "1" Car : dotyczy
Repair "1" *-- "1..*" Service : składa się z
Car "1" *-- "1" PoweredBy
PoweredBy <|-- Engine
PoweredBy <|-- Accumulator
FuelType "1 typ paliwa" <-- Engine
Specialization "1 specjalizacja" <-- Mechanic
ResourceType "1 typ zasobu" <-- Resource
Service <|-- DiagnosticService
TimeBasedService <|-- NewPartReplacement
TimeBasedService <|-- PartRegeneration
Service <|-- TimeBasedService
Service o-- ResourceAbstraction
Service o-- MechanicAbstraction
MechanicAbstraction <|-- Mechanic
ResourceAbstraction <|-- Resource

@enduml